fix: /api 경로 삭제
